[package]
name = "nannou-audio-test"
version = "0.1.0"
authors = ["Cayal Walker <cayalw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"
nannou_audio = "0.15"

[patch.crates-io]
nannou_audio = { path = '/home/snowball2/Projects/Rust/nannou/nannou_audio/' }
