[package]
name = "nannou-audio-test"
version = "0.1.0"
authors = ["Cayal Walker <cayalw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"
cpal = "0.11"               # Low-level cross-platform audio I/O library in pure Rust.
usfx = "0.1"                # Realtime procedurally generated sound effects
rand = "0.8"
